--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,7 +13,7 @@ services:
       ALLOW_ANONYMOUS_LOGIN: yes
   
   kafka:
-    image: bitnami/kafka:3.3.2
+    image: docker.io/bitnami/kafka:3.3.2
     ports:
     - 9092:9092
     restart: on-failure
