--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -11,6 +11,8 @@ services:
     - zookeeper_data:/bitnami
     environment:
       ALLOW_ANONYMOUS_LOGIN: yes
+    networks:
+    - cqrs-net
   
   kafka:
     image: docker.io/bitnami/kafka:3.3.2
@@ -26,6 +28,8 @@ services:
       KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://localhost:9092
     depends_on:
     - zookeeper
+    networks:
+    - cqrs-net
   
   mongodb:
     image: docker.io/mongo:6.0
@@ -34,6 +38,8 @@ services:
     restart: on-failure
     volumes:
     - mongo_data:/data/db
+    networks:
+    - cqrs-net
   
   postgresql:
     image: docker.io/postgres:15-alpine
@@ -43,7 +49,9 @@ services:
       POSTGRES_DB: cqrs
       POSTGRES_USER: cqrs
       POSTGRES_PASSWORD: cqrs
-  
+    networks:
+    - cqrs-net
+
 volumes:
   zookeeper_data:
   kafka_data:
