--- a/bank-account/account.cmd/src/main/resources/application.yaml
+++ b/bank-account/account.cmd/src/main/resources/application.yaml
@@ -1,1 +1,14 @@
+server:
+  port: 5000
 
+spring:
+  data:
+    mongodb:
+      host: ${MONGODB_HOST:localhost}
+      port: ${MONGODB_PORT:27017}
+      database: ${MONGODB_DATABASE:bankAccount}
+  kafka:
+    producer:
+      bootstrap-servers: ${KAFKA_BROKERS:localhost:9092}
+      key-serializer: org.apache.kafka.common.serialization.StringSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
