--- a/bank-account/account.common/pom.xml
+++ b/bank-account/account.common/pom.xml
@@ -22,6 +22,12 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+        <dependency>
+            <groupId>dev.pgjbz</groupId>
+            <artifactId>cqrs.core</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+
 		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
@@ -43,6 +49,7 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-	</dependencies>
+
+    </dependencies>
 
 </project>
