--- a/bank-account/pom.xml
+++ b/bank-account/pom.xml
@@ -14,7 +14,7 @@
     </properties>
 
     <modules>
-        <module>../cqrs-es/cqrs.core</module>
+        <module>../cqrs/cqrs.core</module>
         <module>account.common</module>
         <module>account.cmd</module>
         <module>account.query</module>
